--- a/JSDay1/index.html
+++ b/JSDay1/index.html
@@ -25,6 +25,9 @@
     <div id="listOfElements"></div>
 
 
+    <form>
+        <input>
+    </form>
 
 
     <!-- <script src="./assets/js/main.js" async defer></script> -->
